[gd_scene load_steps=2 format=3 uid="uid://32wobjq41178"]

[ext_resource type="Script" uid="uid://dmu2supmidumo" path="res://Scripts/tetromino.gd" id="1_vnj2s"]

[node name="Tetromino" type="Node2D"]
script = ExtResource("1_vnj2s")

[node name="MoveDownTimer" type="Timer" parent="."]
autostart = true

[node name="InputTimer" type="Timer" parent="."]

[connection signal="timeout" from="MoveDownTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="InputTimer" to="." method="_on_input_timer_timeout"]
